--- a/test/fixtures/reservas.yml
+++ b/test/fixtures/reservas.yml
@@ -3,13 +3,13 @@
 one:
   cliente: one
   quarto: one
-  data_de_entrada: 2023-07-16
-  data_de_saida: 2023-07-16
-  custo: 9.99
+  data_de_entrada: 2077-05-12 01:20:30
+  data_de_saida: 2077-05-12 10:20:30
+  custo: 93.78
 
 two:
   cliente: two
-  quarto: two
-  data_de_entrada: 2023-07-16
-  data_de_saida: 2023-07-16
-  custo: 9.99
+  quarto: one
+  data_de_entrada: 2077-05-12 12:34:56
+  data_de_saida: 2077-05-12 20:34:56
+  custo: 83.36
