--- a/test/fixtures/quartos.yml
+++ b/test/fixtures/quartos.yml
@@ -6,6 +6,7 @@ one:
   disponibilidade: true
   preco_diaria: 250.00
   descricao: Primeiro quarto
+  quantidade_de_hospedes: 2
 
 two:
   numero: 2
@@ -13,3 +14,4 @@ two:
   disponibilidade: true
   preco_diaria: 300.00
   descricao: Segundo quarto
+  quantidade_de_hospedes: 5
